--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the Todo project in this repository
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Joshua Kalule <kaljoshkalule@gmail.com>
+Pimeh Tare-ere <tareerepimeh@gmail.com>
+Apedo Arthur Justin <apedoarthur21@gmail.com>
